tests/integrations/snapshots/integrations__no_file@stdout.snap
---
source: tests/integrations/main.rs
description: Should exit with an error saying no engage file was found.
---

