tests/integrations/snapshots/integrations__one_task@stdout.snap
---
source: tests/integrations/main.rs
description: Should exit sucessfully after running a task.
---
     ╭─┬◀ starting
task │O│ hello world
     ╰─┴▶ success
