tests/integrations/snapshots/integrations__one_task_implicit_group@stderr.snap
---
source: tests/integrations/main.rs
description: Should exit sucessfully and implicitly create a group from the task.
---

