tests/integrations/snapshots/integrations__program_not_found@status_code.snap
---
source: tests/integrations/main.rs
description: Should exit with an error about the program not being found.
---
Some(
    1,
)
