tests/integrations/snapshots/integrations__program_not_found@stderr.snap
---
source: tests/integrations/main.rs
description: Should exit with an error about the program not being found.
---
Errors:
╰─► failed to run the graph
    ╰─► one or more tasks failed
        ╰─► task `task` failed
            ╰─► failed to spawn command "thiscommandalmostcertainlydoesntexistonanyones\"computer\""
                ╰─► No such file or directory (os error 2)
