tests/integrations/snapshots/integrations__program_not_found@stdout.snap
---
source: tests/integrations/main.rs
description: Should exit with an error about the program not being found.
---
     ╭─┬◀ starting
     ╰─┴▶ failure
