tests/integrations/snapshots/integrations__report_all_errors@stderr.snap
---
source: tests/integrations/main.rs
description: Should display multiple task failures in a well-formatted way.
---
Errors:
╰─► failed to run 3 tasks
    ├─► task `[redacted task name]` failed
    │   ╰─► [redacted exit status]
    ├─► task `[redacted task name]` failed
    │   ╰─► [redacted exit status]
    ╰─► task `[redacted task name]` failed
        ╰─► [redacted exit status]
